More bug squashing - fixed the abnormal size of selected_pet_img in the confirm pet modal
Also fixed a minor margin css error in one of the scenery modal popups

--- a/tracktivityPetsWebsite/static/tracktivityPetsWebsite/style/style.css
+++ b/tracktivityPetsWebsite/static/tracktivityPetsWebsite/style/style.css
@@ -619,7 +619,7 @@ p#inventory_detail_pet_description, #inventory_detail_scenery_description, #inve
     text-align: justify;
 }
 
-#inventory_detail_scenery_image, #inventory_detail_scenery_description_div, #store_detail_scenery_description_div, #store_detail_scenery_image, .activate_scenery_button {
+#inventory_detail_scenery_image, #inventory_detail_scenery_description_div, #store_detail_scenery_description_div, #store_detail_scenery_image {
     margin-top: 3%;
 }
 
@@ -632,7 +632,7 @@ p#inventory_detail_pet_description, #inventory_detail_scenery_description, #inve
     height: 40px;
 }
 
-#item_price_div, #item_price {
+#item_price_div, #item_price, .buy_pet_button {
      margin-bottom: 10px;
 }
 
